# abft-ke

./: CMakeLists.txt
platform/: 4torus-2-2-2-2.xml  4torus-4-4-4-4.xml  4torus-8-8-8-8.txt  generate_platform.rb  generate_platform.sh  torus-2-2-4-4.xml
src/Common/: ber.c  func.h  hamming_cs.c  matrix_op.c  util.c
src/HammingAbft/: HCAbft.c  HCAbft_no_retransmission.c  MM_hmcabft.c  Makefile  test  test.c
src/MM/: MM.c
src/OriginalAbft/: OrigAbft.c
